fix: fix an overlapping scroll in mobile version

--- a/src/components/LeftSidebar.css
+++ b/src/components/LeftSidebar.css
@@ -65,7 +65,7 @@
     border-radius: 0px 7px 7px 0px;
 }
 
-.menuItems li:hover, svg:hover {
+.menuItems li:hover {
     color: white;
 }
 
@@ -74,6 +74,9 @@
 }
 
 .menuItems li:first-child > svg {
+    color: white;
+}
+.menuItems li > svg:hover {
     color: white;
 }
 
