--- a/src/components/RightSidebar.css
+++ b/src/components/RightSidebar.css
@@ -165,7 +165,8 @@
     padding: 17px 37px 16px 38px;
     margin-top: 27px;
     width: 100%;
-    height: 202px;
+    max-width: 194px;
+    height: 210px;
 }
 
 .containerUpgrade > .btn {
